fix: batch intents to target common session
